fix: ajustando código de acordo com sonar